add_subdirectory(design-underground-system)
add_subdirectory(clone_graph)
add_subdirectory(domino_rotations)
add_subdirectory(isomorphic_strings)
add_subdirectory(median_of_sorted_arrays)
add_subdirectory(move_zeroes)
add_subdirectory(my_hash_set)
add_subdirectory(regexp_matching)
add_subdirectory(rotate_array)
add_subdirectory(rotate_image)
add_subdirectory(search_2dim_matrix)
add_subdirectory(stone-game-iv)
add_subdirectory(swap_nodes_in_pairs)
add_subdirectory(two_sum_ii_input_array_is_sorted)

enable_testing()
