add_subdirectory(9_palindrome_number)
add_subdirectory(14_longest_common_prefix)
add_subdirectory(20_valid_parentheses)
add_subdirectory(28_implement_strstr)
add_subdirectory(88_merge_sorted_array)
add_subdirectory(104_maximum_depth_of_binary_tree)
add_subdirectory(199_bt_right_side_view)
add_subdirectory(416_partition_equal_subset_sum)
add_subdirectory(496_next_greater_element_i)
add_subdirectory(1235-max-profit-job-scheduling)
add_subdirectory(1465_max_area_of_a_piece_of_cake)
add_subdirectory(2008-max-earnings-from-taxi)
add_subdirectory(2551_put_marbles_in_bags)
add_subdirectory(2818_apply_operatons_to_maximize_score)
add_subdirectory(3396_min_number_of_ops_to_make_elems_distinct)
add_subdirectory(3507_minimum_pair_removal_to_sort_array)

add_subdirectory(arithmetic-slices-ii-subsequence)
add_subdirectory(clone_graph)
add_subdirectory(design-underground-system)
add_subdirectory(domino_rotations)
add_subdirectory(isomorphic_strings)
add_subdirectory(median_of_sorted_arrays)
add_subdirectory(move_zeroes)
add_subdirectory(multiply-strings)
add_subdirectory(my_hash_set)
add_subdirectory(regexp_matching)
add_subdirectory(roman-to-integer)
add_subdirectory(rotate_array)
add_subdirectory(rotate_image)
add_subdirectory(search_2dim_matrix)
add_subdirectory(stone-game-iv)
add_subdirectory(swap_nodes_in_pairs)
add_subdirectory(two_sum_ii_input_array_is_sorted)

enable_testing()
